# anaconda-cli

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SBOM.json  SBOM.md  build.rs  environment-dev.yml  pixi.toml  pyproject.toml  renovate.json
.github/: CODEOWNERS  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/actions/setup-ana/: action.yml
.github/actions/sign-notarize-macos/: action.yaml
.github/actions/sign-windows/: action.yaml
.github/actions/upload-package/: action.yml
.github/workflows/: auto-label.yaml  bot-code-review.yaml  bot-code-review.yml  ci.yaml  lint-pr-title.yaml  pre-commit.yaml  release.yaml  release.yml  test.yml  visual-snapshots.yaml
conda-recipes/metaflow-checkpoint/: recipe.yaml
conda-recipes/metaflow-torchrun/: recipe.yaml
conda-recipes/ob-metaflow/: recipe.yaml
conda-recipes/ob-metaflow-extensions/: fast_bakery_default_channel.patch  recipe.yaml
conda-recipes/ob-metaflow-stubs/: recipe.yaml
conda-recipes/ob-project-utils/: recipe.yaml
conda-recipes/outerbounds/: recipe.yaml
conda.recipe/: build.bat  build.sh  meta.yaml  recipe.yaml  run_test.bat  run_test.sh
docs/: conda.md  config.md  install.md  release.md  usage.md
docs/design/: anaconda-mcp-registry.md  conda-tool.md  tool-download.md
lockfiles/anaconda-cli/: pixi.toml
lockfiles/conda/: pixi.toml
scripts/: bootstrap.sh  create_jira_release.py  create_self_signed_certificate_macos.sh  get_version.sh  install.ps1  install.sh  sbom-process.py  update_lockfiles.sh  with_version.py  write_conda_variant.py
src/: anaconda_cli.rs  api.rs  cli.rs  config.rs  console.rs  context.rs  diagnostics.rs  error_handler.rs  errors.rs  feedback.rs  fetch.rs  help.rs  http.rs  input.rs  main.rs  paths.rs  projects.rs  qr.rs  release_notes.rs  status.rs  table.rs  update.rs  update_notifier.rs  utils.rs  version.rs
src/anaconda_cli/: __init__.py
src/auth/: actions.rs  api_keys.rs  errors.rs  keyring.rs  login.rs  mod.rs  responses.rs
src/channels/: commands.rs  mod.rs
src/feature/: experimental.rs  list.rs  main_x.rs  mod.rs  wheels.rs
src/help/: data.rs  mod.rs  outerbounds.rs  styles.rs  term.rs
src/init/: main_x.rs  mod.rs
src/installer/: mod.rs
src/mcp/: commands.rs  mod.rs  run.rs
src/outerbounds/: app.rs  commands.rs  configure.rs  init.rs  mod.rs  run.rs
src/outerbounds/templates/: .gitignore  README.md  obproject.toml  pyproject.toml
src/outerbounds/templates/deployments/hello_app/: README.md  app.py  config.yaml
src/outerbounds/templates/flows/hello_flow/: README.md  flow.py
src/project/: env.rs  manifest.rs  mod.rs  tasks.rs
src/pypi/: installer.rs  mod.rs  wheel.rs
src/repo/: commands.rs  mod.rs  run.rs
src/setup/: main_x.rs  mod.rs
src/shim/: shim.rs
src/telemetry/: event.rs  mod.rs  otel.rs  spawn.rs  spool.rs  submit.rs
src/tools/: common.rs  conda_wrapper.rs  fleet.rs  install.rs  list.rs  lockfiles.rs  miniconda.rs  mod.rs  pip.rs  pixi_config.rs  prewarm.rs  run.rs  specs.rs  tools.rs  uninstall.rs  utils.rs  uv.rs
src/ua/: mod.rs  platform.rs
src/ui/: mod.rs  progress.rs  status.rs  styles.rs
src/wrappers/: conda.rs
templates/ob_project/deployments/hello_app/: config.yaml
templates/ob_project/flows/hello_flow/: flow.py
tests/: conftest.py  helpers.py  mock_auth_server.py  test_auth.py  test_cli.py  test_feature.py  test_install_script.py  test_macos_signing.py  test_ps1_install_script.py  test_self_feedback.py  test_self_update.py  test_sh_install_script.py  test_tools.py  test_windows_signing.py
tool-specs/: lock-all.sh  lock-changed.sh
tool-specs/anaconda-cli/: pixi.toml
tool-specs/conda/: .condarc  pixi.toml
tool-specs/observable-python/: pixi.toml
tool-specs/outerbounds/: pixi.toml
tool-specs/pixi/: pixi.toml
vhs/: help.tape  org-help.tape  self-update-help.tape
