[package]
name = "ana"
version = "0.0.0" # Placeholder - actual version derived from git tags via build.rs
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# TODO(mattkram): For the early project phase, we will enable diagnostics in our builds by
#                 default. We will review this behavior before public release.
default = ["diagnostics"]
diagnostics = ["sentry"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = "0.3"
dirs = "6"
http = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.16"
indicatif = "0.18"
indoc = "2"
miette = { version = "7.6", features = ["fancy"] }
rattler = { version = "0.40", default-features = false, features = ["indicatif"] }
rattler_cache = { version = "0.6", default-features = false }
rattler_conda_types = { version = "0.44", default-features = false }
rattler_lock = { version = "0.27", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "native-tls"] }
reqwest-middleware = "0.4"
self-replace = "1.5"
sentry = { version = "0.35", optional = true }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anaconda-otel-rs = { git = "https://github.com/anaconda/anaconda-otel-rs" }
thiserror = "2"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
webbrowser = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opentelemetry = "0.31.0"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
