[package]
name = "ana"
version = "0.0.0" # Placeholder - actual version derived from git tags via build.rs
edition = "2024"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rlimit = "0.11"

[features]
# Diagnostics (Sentry) is opt-in. Enable with `cargo build --features diagnostics`.
# Unstable features are hidden and disabled by default.
default = []
diagnostics = ["dep:sentry"]
unstable = []

[dependencies]
anaconda-anon-usage = { version = "0.8.0-pre.9", features = ["rattler", "reqwest"] }
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
futures-util = "0.3"
dirs = "6"
http = "1"
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
console = "0.16"
indicatif = "0.18"
log = "0.4"
miette = { version = "7.6", features = ["fancy"] }
rattler = { version = "0.43", default-features = false, features = ["indicatif"] }
rattler_cache = { version = "0.8", default-features = false }
rattler_conda_types = { version = "0.46", default-features = false }
rattler_lock = { version = "0.30", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "multipart", "native-tls"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
rpassword = "7"
self-replace = "1.5"
sentry = { version = "0.48", optional = true }
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
toml_edit = "0.25"
anaconda-otel-rs = { git = "https://github.com/anaconda/anaconda-otel-rs" }
thiserror = "2"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "time", "fs", "sync"] }
webbrowser = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
opentelemetry = "0.31.0"
url = "2.5.8"

[dev-dependencies]
temp-env = "0.3"
tempfile = "3"
